<resources>
    <string name="app_name">ShopShop</string>
    <string name="enter_your_account">Entre com sua conta</string>
    <string name="email">Email*</string>
    <string name="password">Senha*</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="login">Login</string>
    <string name="register_now">Cadastrar Agora</string>
    <string name="dont_have_account">Não tem conta?</string>
    <string name="register">Cadastrar</string>
    <string name="do_have_account">Já tem conta?</string>
    <string name="to_do_login">Fazer login</string>
    <string name="nome">Nome*</string>
    <string name="user_pass_invalid">Login ou senha inválido!</string>
    <string name="fill_all_fields">Preencha todos os campos!</string>
    <string name="register_success">Cadastrado com sucesso!</string>
    <string name="already_registered">Email já cadastrado!</string>
</resources>